Added no source relation functionality

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-11-03 (49fb6089f661dccd45a1649796eb3a1009fa1c6a)</b>
+    Build: <b>2016-12-01 (49fb6089f661dccd45a1649796eb3a1009fa1c6a)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
+    <h5 style="text-decoration: underline;">December</h5>
+    <p>01 December 2016: Added no source relation functionality!</p>
+    
     <h5 style="text-decoration: underline;">November</h5>
     <p>03 November 2016: Removed different_URI completely (obsolete) and fixed missing global_variable in intermediate.</p>
     <p>02 November 2016: Major update: Generators tab with full functionality and some extra fixes! Updating x3mlEngine to 1.7.3.</p>
