Checking if Source Relation is blank, before adding Intermediate.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-12-01 (49fb6089f661dccd45a1649796eb3a1009fa1c6a)</b>
+    Build: <b>2016-12-02 (0b311d7004a338f4c004df515cd142524c0ff4ca)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">December</h5>
+    <p>02 December 2016: Checking if Source Relation is blank, before adding Intermediate</p>
     <p>01 December 2016: Added no source relation functionality!</p>
     
     <h5 style="text-decoration: underline;">November</h5>
