Extending copyright to 2017

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2014-2016 Institute of Computer Science,
+Copyright 2014-2017 Institute of Computer Science,
 Foundation for Research and Technology - Hellas
 
 Licensed under the EUPL, Version 1.1 or - as soon they will be approved
@@ -28,16 +28,24 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>3.1</b><br/>
-    Build: <b>2016-12-06 (d490d68af6442f755db01219649c6571410dfe94)</b>
+    Version: <b>3.2-SNAPSHOT</b><br/>
+    Build: <b>2017-01-19 (d5a43daf78ede2ea4bb560e0edb540ff556ae201)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
+
+    <h4 style="text-decoration: underline;">2017</h4>
+
+    <h5 style="text-decoration: underline;">January</h5>
+    <p>19 January 2016: Fixed "Source Analyzer enabling when editing first domain value" bug.</p>
+    <p>13 January 2016: Started working on Mapping Suggester integration.</p>
+
+
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">December</h5>
-    <p>06 December 2016: Release 3.1.</p>
+    <p>06 December 2016: <b>Release 3.1</b>.</p>
     <p>02 December 2016: Checking if Source Relation is blank, before adding Intermediate</p>
     <p>01 December 2016: Added no source relation functionality!</p>
 
@@ -75,7 +83,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <p>12 July 2016: Adding alert message when fillCombos fails.</p>
 
     <h5 style="text-decoration: underline;">April</h5>
-    <p>22 April 2016: Release 3.0.</p>
+    <p>22 April 2016: <b>Release 3.0</b>.</p>
     <p>15 April 2016: Fixing transformation redirect and source encoding bugs. Updating x3ml Engine used. </p>
     <p>04 April 2016: Fixing "hiding add buttons when updating mappings raw xml" bug. Removing margin-left from generators inside additional 
         to give more width.</p>
