Generators tab redesigned

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-01-19 (d5a43daf78ede2ea4bb560e0edb540ff556ae201)</b>
+    Build: <b>2017-01-30 (d5a43daf78ede2ea4bb560e0edb540ff556ae201)</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">January</h5>
+    <p>30 January 2016: Generators tab redesigned.</p>
+    <p>27 January 2016: Links revisited and "Generators add buttons visible" bug fixed.</p>
     <p>19 January 2016: Fixed "Source Analyzer enabling when editing first domain value" bug.</p>
     <p>13 January 2016: Started working on Mapping Suggester integration.</p>
 
