--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-02-01 (d5a43daf78ede2ea4bb560e0edb540ff556ae201)</b>
+    Build: <b>2017-02-02 (1d07e9189acc8c3c064b33e25a6bc96d9cb05ffa)</b>
 </fieldset>
 
 <fieldset>
@@ -37,9 +37,10 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
 
-     <h5 style="text-decoration: underline;">February</h5>
+    <h5 style="text-decoration: underline;">February</h5>
+    <p>02 February 2017: Delete Map/Link functionality is now available for new maps/links (User does not have to switch to view mode and then click edit to delete).</p>
     <p>01 February 2017: Minor fixes continued.</p>
-    
+
     <h5 style="text-decoration: underline;">January</h5>
     <p>31 January 2017: Minor fixes.</p>
     <p>30 January 2017: Generators tab redesigned.</p>
