--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,15 +29,22 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-02-09 (caad57b8676b1b2f51d6dbe1d8ee55079e1fbfc0)</b>
+    Build: <b>2017-03-06 (4779190b3cdb77a330a15aeb8d919f41268cb61d)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2017</h4>
-
+    <h5 style="text-decoration: underline;">March</h5>
+    <p>06 March 2017: Namespaces changes almost complete (NEEDS TESTING)! Entire namespaces-uri-prefix Java code
+        for eXist reasoner redesigned and improved(hopefully). Will publish a new release as soon as it is stable.</p>
+    <p>03 March 2017: Updated x3ml engine used (Version 1.7.5-SNAPSHOT from ICS Maven repository).</p>
+    
     <h5 style="text-decoration: underline;">February</h5>
+    <p>23 February 2017: X3ml schema changes concerning namespaces (version 1.2). Complete redesign
+        (<b>ATTENTION! NO LONGER COMPATIBLE WITH PREVIOUS VERSIONS</b>)</p>
+
     <p>09 February 2017: Changing generators width if no additional. Fixed a label generators bug (showing 2 label generators when adding just one)</p>
     <p>06 February 2017: Bug fix (matching table combos populated with generator names instead!)</p>
     <p>02 February 2017: Delete Map/Link functionality is now available for new maps/links (User does not have to switch to view mode and then click edit to delete).</p>
