Fixed source intermediate bug when source analyzer was on. Fixed a couple of generators bugs reported by Lauren (when multiple additionals)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -38,7 +38,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
     <p>06 March 2017: Namespaces changes almost complete (NEEDS TESTING)! Entire namespaces-uri-prefix Java code
-        for eXist reasoner redesigned and improved(hopefully). Will publish a new release as soon as it is stable.</p>
+        for eXist reasoner redesigned and improved(hopefully). Will publish a new release as soon as it is stable.
+    Fixed source intermediate bug when source analyzer was on. Fixed a couple of generators bugs
+        reported by Lauren (when multiple additionals).</p>
     <p>03 March 2017: Updated x3ml engine used (Version 1.7.5-SNAPSHOT from ICS Maven repository).</p>
     
     <h5 style="text-decoration: underline;">February</h5>
