Added a new generator named "ConcatMultipleTerms" with its args. Added lastModified info in admin part
Added a new generator named "ConcatMultipleTerms" with its args. Added
lastModified info in admin part when closing mapping. Changed links font
color.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-06 (4779190b3cdb77a330a15aeb8d919f41268cb61d)</b>
+    Build: <b>2017-03-07 (4779190b3cdb77a330a15aeb8d919f41268cb61d)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>07 March 2017: Added a new generator named "ConcatMultipleTerms" with its args. Added lastModified info in admin part
+    when closing mapping. Changed links font color.</p>
     <p>06 March 2017: Namespaces changes almost complete (NEEDS TESTING)! Entire namespaces-uri-prefix Java code
         for eXist reasoner redesigned and improved(hopefully). Will publish a new release as soon as it is stable.
     Fixed source intermediate bug when source analyzer was on. Fixed a couple of generators bugs
