Added column to show mapping and links index (Excel-like)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-08 ()</b>
+    Build: <b>2017-03-09 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>09 March 2017: Added column to show mapping and links index (Excel-like)</p>
     <p>08 March 2017: If no prefixes are defined inside source or target block, use prefixes from namespaces block (trying 
     to be more backwards compatible)</p>
     <p>07 March 2017: Added a new generator named "ConcatMultipleTerms" with its args. Added lastModified info in admin part
