Visual changes (Korina's proposals)

--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -26,7 +26,7 @@ Authors : Georgios Samaritakis, Konstantina Konsolaki.
 This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
 -->
-<div class="well" id="config">                     
+<div class="well" id="transformation">                     
 
     <form  role="form" >
         <fieldset>
