Added second top toolbar to collapse/expand rows and columns. Removed collapse/expand functionality.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-14 ()</b>
+    Build: <b>2017-03-15 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>15 March 2017: Added second top toolbar to collapse/expand rows and columns. Removed collapse/expand functionality
+    from map headers.</p>
     <p>14 March 2017: Added scrollbar for generators table. Replacing right floating actions menu with a fixed top one.</p>
     <p>13 March 2017: Restoring opacity when clicking another tab (in case of error). Fixed bug with Generators tab in View mode.</p>
     <p>10 March 2017: Introduced mCustomScrollbar as internal scrollbar for tables (matching for now, will do for generators).</p>
