--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -106,16 +106,23 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
                 <div class="form-group ">
 
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-10">
                             <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.7.5-SNAPSHOT)</label>     
                             <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"/>
 
-                            <textarea id="engineResult" style="width:100%;" rows="20" readonly="readonly">
+                            <textarea id="engineResult" style="width:100%;" rows="20">
 
                             </textarea>
 
+                        </div>      
+                        <div class="col-sm-2 ">
+                            <button style="margin-top:18px;" id="saveTarget" type="button" class="btn btn-default btn-sm disabled">Save as Target Record</button>
+                        </div>
+                         <div class="col-sm-2 ">
+                            <button style="margin-top:18px;" id="visualizeTarget" type="button" class="btn btn-default btn-sm">Visualize</button>
                         </div>
                     </div>
+
 
                 </div>
         </fieldset>
