--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-21 ()</b>
+    Build: <b>2017-03-22 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>22 March 2017: Transformation tab now comes with target record file filled (if one exists).</p>
     <p>21 March 2017: Added "Save as target record" functionality in Transformation tab. User may now upload ttl or trig files
     as target records.</p>
     <p>15 March 2017: Added second top toolbar to collapse/expand rows and columns. Removed collapse/expand functionality
