Added option to scan uploaded schema files and autofill namespaces and prefixes.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-23 ()</b>
+    Build: <b>2017-03-24 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>24 March 2017: Added option to scan uploaded schema files and autofill namespaces and prefixes.</p>
     <p>23 March 2017: Finished integration with "Subject Visualizer" (new tool)</p>
     <p>22 March 2017: Transformation tab now comes with target record file filled (if one exists).</p>
     <p>21 March 2017: Added "Save as target record" functionality in Transformation tab. User may now upload ttl or trig files
