--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -109,7 +109,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
                     <div class="row">
                         <div class="col-sm-10">
-                            <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.7.5-SNAPSHOT)</label>     
+                            <label class="control-label" >Target Record RDF File (Using x3ml engine version 1.7.5)</label>     
                             <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"/>
                             <textarea id="engineResult" style="width:100%;" rows="20">
                             </textarea>
