--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,37 +29,40 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-03-28 ()</b>
+    Build: <b>2017-04-06 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2017</h4>
+    <h5 style="text-decoration: underline;">April</h5>
+    <p>06 April 2017: Added "select one or more mapping-domain-link" functionality by clicking on first index column.</p>
     <h5 style="text-decoration: underline;">March</h5>
+    <p>29 March 2017: Added "Update to new x3ml schema (version 1.2)" functionality.</p>
     <p>28 March 2017: Updating x3ml engine used (1.7.5)</p>
     <p>24 March 2017: Added option to scan uploaded schema files and autofill namespaces and prefixes.</p>
     <p>23 March 2017: Finished integration with "Subject Visualizer" (new tool)</p>
     <p>22 March 2017: Transformation tab now comes with target record file filled (if one exists).</p>
     <p>21 March 2017: Added "Save as target record" functionality in Transformation tab. User may now upload ttl or trig files
-    as target records.</p>
+        as target records.</p>
     <p>15 March 2017: Added second top toolbar to collapse/expand rows and columns. Removed collapse/expand functionality
-    from map headers. Added toolbar in info tab and removed stray buttons. Changed icon for collapse/expand map and improved
-    functionality.</p>
+        from map headers. Added toolbar in info tab and removed stray buttons. Changed icon for collapse/expand map and improved
+        functionality.</p>
     <p>14 March 2017: Added scrollbar for generators table. Replacing right floating actions menu with a fixed top one.</p>
     <p>13 March 2017: Restoring opacity when clicking another tab (in case of error). Fixed bug with Generators tab in View mode.</p>
     <p>10 March 2017: Introduced mCustomScrollbar as internal scrollbar for tables (matching for now, will do for generators).</p>
     <p>09 March 2017: Added column to show mapping and links index (Excel-like). Visual changes (Korina's proposals)</p>
     <p>08 March 2017: If no prefixes are defined inside source or target block, use prefixes from namespaces block (trying 
-    to be more backwards compatible)</p>
+        to be more backwards compatible)</p>
     <p>07 March 2017: Added a new generator named "ConcatMultipleTerms" with its args. Added lastModified info in admin part
-    when closing mapping. Changed links font color.</p>
+        when closing mapping. Changed links font color.</p>
     <p>06 March 2017: Namespaces changes almost complete (NEEDS TESTING)! Entire namespaces-uri-prefix Java code
         for eXist reasoner redesigned and improved(hopefully). Will publish a new release as soon as it is stable.
-    Fixed source intermediate bug when source analyzer was on. Fixed a couple of generators bugs
+        Fixed source intermediate bug when source analyzer was on. Fixed a couple of generators bugs
         reported by Lauren (when multiple additionals).</p>
     <p>03 March 2017: Updated x3ml engine used (Version 1.7.5-SNAPSHOT from ICS Maven repository).</p>
-    
+
     <h5 style="text-decoration: underline;">February</h5>
     <p>23 February 2017: X3ml schema changes concerning namespaces (version 1.2). Complete redesign
         (<b>ATTENTION! NO LONGER COMPATIBLE WITH PREVIOUS VERSIONS</b>)</p>
