--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-04-06 ()</b>
+    Build: <b>2017-04-11 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,7 +37,10 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">April</h5>
-    <p>06 April 2017: Added "select one or more mapping-domain-link" functionality by clicking on first index column.</p>
+    <p>11 April 2017: Update session attribute for jena reasoner when deleting target_info blocks even if eXist reasoner 
+    is selected. Highlight entire map when hovering over map header.</p>
+    <p>06 April 2017: Added "Select one or more mapping-domain-link" functionality by clicking on first (index) column.</p>
+   
     <h5 style="text-decoration: underline;">March</h5>
     <p>29 March 2017: Added "Update to new x3ml schema (version 1.2)" functionality.</p>
     <p>28 March 2017: Updating x3ml engine used (1.7.5)</p>
