Changes in Transformation tab
Changes in Transformation tab. Turtle is now default. Alert message when
trying to visualize rdf or trig.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-04-12 ()</b>
+    Build: <b>2017-05-05 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2017</h4>
+    <h5 style="text-decoration: underline;">May</h5>
+    <p>05 May 2017: Changes in Transformation tab. Turtle is now default. Alert message when trying to visualize
+    rdf or trig.</p>
+    
     <h5 style="text-decoration: underline;">April</h5>
     <p>12 April 2017: Added context menus using jquery contextMenu plugin v2.4.4. For now, nothing
     happens when clicking on a menu item (TODO)</p>
