--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -88,14 +88,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
                         <label class="control-label" >Output Format </label>
                         <br/>
                         <div class="btn-group outputFormat" data-toggle="buttons">
-                            <label class="btn btn-default btn-sm active">
+                            <label class="btn btn-default btn-sm ">
 
                                 <input type="radio"  name="outputFormat" value="RDF/XML" class="toggle" /> RDF/XML
                             </label> 
                             <label class="btn btn-default btn-sm">
                                 <input type="radio"  name="outputFormat" value="N-triples" class="toggle" /> N-triples
                             </label> 
-                            <label class="btn btn-default btn-sm">
+                            <label class="btn btn-default btn-sm active">
                                 <input type="radio"  name="outputFormat" value="Turtle" class="toggle" /> Turtle
                             </label> 
                         </div>
@@ -123,7 +123,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
                             <input title="Subject"  id="subject" type="text" class="form-control input-sm" placeholder="Fill in value"/>
                         </div>
                         <div class="col-sm-2 ">
-                            <button title="Click button to visualize target record file" style="margin-top:18px;" id="visualizeTarget" type="button" class="btn btn-default btn-sm">Visualize selected subject</button>
+                            <button title="Click button to visualize saved target record file" style="margin-top:18px;" id="visualizeTarget" type="button" class="btn btn-default btn-sm">Visualize selected subject</button>
                         </div>
                     </div>
 
