Added horizontal scrollbar and reduced scroll speed

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-05-05 ()</b>
+    Build: <b>2017-05-08 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">May</h5>
+    <p>08 May 2017: Added horizontal scrollbar and reduced scroll speed.</p>
     <p>05 May 2017: Changes in Transformation tab. Turtle is now default. Alert message when trying to visualize
     rdf or trig.</p>
     
