--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-05-10 ()</b>
+    Build: <b>2017-05-10 (ddfb56a9fda4d1d93f21b5f94810119b58d77895)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">May</h5>
+    <p>11 May 2017: Hiding html upload in example source record (Maria's suggestion), since it was not used
+    and created visual issues (sometimes).</p>
     <p>10 May 2017: Disabling eXist target analyzer when target schemas are mixed and not only rdf/s. Visual improvements.</p>
     <p>08 May 2017: Added horizontal scrollbar and reduced scroll speed.</p>
     <p>05 May 2017: Changes in Transformation tab. Turtle is now default. Alert message when trying to visualize
