--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,6 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
+    Build: <b>2017-05-12 ()</b>
 </fieldset>
 
 <fieldset>
@@ -36,7 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">May</h5>
-    <p>12 May 2017: Dumping mCustomScrollbar plugin for a much simpler solution. Making RDFVisualizer link relative. </p>
+    <p>12 May 2017: Dumping mCustomScrollbar plugin for a much simpler solution. Making RDFVisualizer link relative.
+    Added extra code to fix namespaces when updating schema version from 1.1 to 1.2.</p>
     <p>11 May 2017: Hiding html upload in example source record (Maria's suggestion), since it was not used
     and created visual issues (sometimes).</p>
     <p>10 May 2017: Disabling eXist target analyzer when target schemas are mixed and not only rdf/s. Visual improvements.</p>
