--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-05-18 ()</b>
+    Build: <b>2017-05-24 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">May</h5>
+    <p>24 May 2017: Fixed XML bug when editing RAW XML in Generators tab.</p>
+    <p>23 May 2017: Fixed view mode bug.</p>
     <p>18 May 2017: Configuration tab is now also available in view mode to change source and target paths.</p>
     <p>16 May 2017: Fixing a visual bug in info tab (clicking on edit, made buttons disappear)</p>
     <p>12 May 2017: Dumping mCustomScrollbar plugin for a much simpler solution. Making RDFVisualizer link relative.
