--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-05-24 ()</b>
+    Build: <b>2017-05-30 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
     <h5 style="text-decoration: underline;">May</h5>
+    <p>30 May 2017: Fixed a bug (not showing xpaths in source links, when there was an if-rule in domain). Also
+        shortened source domain xpaths when starting with // to reduce table cell width.
+        Fixed "upload source schema" bug. Hiding "Delete source" when there is only one!
     <p>24 May 2017: Fixed XML bug when editing RAW XML in Generators tab.</p>
     <p>23 May 2017: Fixed view mode bug.</p>
     <p>18 May 2017: Configuration tab is now also available in view mode to change source and target paths.</p>
