First right-click menu implementation! Functionalities available so far "Delete Link", "Delete Map".

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,18 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-05-30 ()</b>
+    Build: <b>2017-06-01 ()</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h4 style="text-decoration: underline;">2017</h4>
+
+    <h5 style="text-decoration: underline;">June</h5>
+    <p>01 June 2017: First right-click menu implementation! Functionalities available so far "Delete Link", "Delete Map". 
+        More to come... </p>
+
     <h5 style="text-decoration: underline;">May</h5>
     <p>30 May 2017: Fixed a bug (not showing xpaths in source links, when there was an if-rule in domain). Also
         shortened source domain xpaths when starting with // to reduce table cell width.
@@ -45,21 +50,21 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <p>18 May 2017: Configuration tab is now also available in view mode to change source and target paths.</p>
     <p>16 May 2017: Fixing a visual bug in info tab (clicking on edit, made buttons disappear)</p>
     <p>12 May 2017: Dumping mCustomScrollbar plugin for a much simpler solution. Making RDFVisualizer link relative.
-    Added extra code to fix namespaces when updating schema version from 1.1 to 1.2. Fixed first link xpaths bug.</p>
+        Added extra code to fix namespaces when updating schema version from 1.1 to 1.2. Fixed first link xpaths bug.</p>
     <p>11 May 2017: Hiding html upload in example source record (Maria's suggestion), since it was not used
-    and created visual issues (sometimes).</p>
+        and created visual issues (sometimes).</p>
     <p>10 May 2017: Disabling eXist target analyzer when target schemas are mixed and not only rdf/s. Visual improvements.</p>
     <p>08 May 2017: Added horizontal scrollbar and reduced scroll speed.</p>
     <p>05 May 2017: Changes in Transformation tab. Turtle is now default. Alert message when trying to visualize
-    rdf or trig.</p>
-    
+        rdf or trig.</p>
+
     <h5 style="text-decoration: underline;">April</h5>
     <p>12 April 2017: Added context menus using jquery contextMenu plugin v2.4.4. For now, nothing
-    happens when clicking on a menu item (TODO)</p>
+        happens when clicking on a menu item (TODO)</p>
     <p>11 April 2017: Update session attribute for jena reasoner when deleting target_info blocks even if eXist reasoner 
-    is selected. Highlight entire map when hovering over map header.</p>
+        is selected. Highlight entire map when hovering over map header.</p>
     <p>06 April 2017: Added "Select one or more mapping-domain-link" functionality by clicking on first (index) column.</p>
-   
+
     <h5 style="text-decoration: underline;">March</h5>
     <p>29 March 2017: Added "Update to new x3ml schema (version 1.2)" functionality.</p>
     <p>28 March 2017: Updating x3ml engine used (1.7.5)</p>
