Added a new console output window in Transformation tab to separate error messages from actual target file

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-06-01 ()</b>
+    Build: <b>2017-06-20 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">June</h5>
+    <p>20 June 2017: Added a new console output window in Transformation tab to separate error messages from
+    actual target file.</p>
     <p>01 June 2017: First right-click menu implementation! Functionalities available so far "Delete Link", "Delete Map". 
         More to come... </p>
 
