--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-06-27 ()</b>
+    Build: <b>2017-07-13 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
 
+    <h5 style="text-decoration: underline;">July</h5>
+    <p>13 July 2017: Fixed a bug: When deleting a NOT if-rule (inequality or nonexistence), entire target_relation block was deleted too! </p>
+    
     <h5 style="text-decoration: underline;">June</h5>
     <p>27 June 2017: Improved source schema block functionality.</p>
     <p>20 June 2017: Added a new console output window in Transformation tab to separate error messages from
