Updating x3ml engine used (1.8.1). Fixed generator policy file size issue.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,6 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-07-17 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +36,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
 
+     <h5 style="text-decoration: underline;">August</h5>
+    <p>03 August 2017: Updating x3ml engine used (1.8.1). Fixed generator policy file size issue.</p>
+    
     <h5 style="text-decoration: underline;">July</h5>
     <p>17 July 2017: Updating x3ml engine used (1.8.0)</p>
     <p>13 July 2017: Fixed a bug: When deleting a NOT if-rule (inequality or nonexistence), entire target_relation block was deleted too! </p>
