Updated last modified date in readme

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,6 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
+    Build: <b>2017-08-03 ()</b>
 </fieldset>
 
 <fieldset>
