--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-08-24 (8396cb548757f24027af57e4206c175ac15563c0)</b>
+    Build: <b>2017-10-03 ()</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
     <h4 style="text-decoration: underline;">2017</h4>
 
+    <h5 style="text-decoration: underline;">October</h5>
+    <p>03 October 2017: Adding extra info in web.xml to make Windows/Linux setup simpler. Removing useless targetRecordsFolder param.</p>
+    
     <h5 style="text-decoration: underline;">August</h5>
     <p>24 August 2017: Improving namespaces behavior and auto repairing file.</p>
     <p>03 August 2017: Updating x3ml engine used (1.8.1). Fixed generator policy file size issue.</p>
