RDFVisualizer URL is now a parameter in web.xml. When calling RDFVisualizer only one tab is used.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-10-03 ()</b>
+    Build: <b>2017-10-05 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>05 October 2017: RDFVisualizer URL is now a parameter in web.xml. When calling RDFVisualizer only one tab is used.</p>
     <p>03 October 2017: Adding extra info in web.xml to make Windows/Linux setup simpler. Removing useless targetRecordsFolder param.</p>
     
     <h5 style="text-decoration: underline;">August</h5>
