Bug fixing (schemata_list schemas deleted and no refresh in transformation source when uploading new file)
Fixed Redmine Bug#177 (I have loaded a sample source file and I have
done a transform. I go to info tab,
change source file and immediately go to transform. It has still the old
file and I need to reload the screen.)
Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in
schemata_list.xml deleted)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-10-05 ()</b>
+    Build: <b>2017-10-13 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,9 +38,12 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>13 October 2017: Fixed Redmine Bug#177 (I have loaded a sample source file and I have done a transform. I go to info tab,
+        change source file and immediately go to transform. It has still the old file and I need to reload the screen.)
+        Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in schemata_list.xml deleted)
     <p>05 October 2017: RDFVisualizer URL is now a parameter in web.xml. When calling RDFVisualizer only one tab is used.</p>
     <p>03 October 2017: Adding extra info in web.xml to make Windows/Linux setup simpler. Removing useless targetRecordsFolder param.</p>
-    
+
     <h5 style="text-decoration: underline;">August</h5>
     <p>24 August 2017: Improving namespaces behavior and auto repairing file.</p>
     <p>03 August 2017: Updating x3ml engine used (1.8.1). Fixed generator policy file size issue.</p>
