Added Redmine Feature#180 (Automatically assign the Literal generator to all Literals).
Added Redmine Feature#180 (Automatically assign the Literal generator to
all Literals). Fixed
the ":" issue we had with values such as
:http://www.w3.org/2000/01/rdf-schema#Literal.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.2-SNAPSHOT</b><br/>
-    Build: <b>2017-10-13 ()</b>
+    Build: <b>2017-10-20 ()</b>
 </fieldset>
 
 <fieldset>
@@ -38,6 +38,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2017</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
+        the ":" issue we had with values such as :http://www.w3.org/2000/01/rdf-schema#Literal.
     <p>13 October 2017: Fixed Redmine Bug#177 (I have loaded a sample source file and I have done a transform. I go to info tab,
         change source file and immediately go to transform. It has still the old file and I need to reload the screen.)
         Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in schemata_list.xml deleted)
